Blender Crash: Using 'Close' Operator on Grease Pencil Stroke with Catmull Rom #127302

Closed
opened 2024-09-08 04:24:27 +02:00 by Kevin C. Burke · 1 comment
Contributor

System Information
Operating system: macOS-14.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-06 21:34, hash: b520ae6efe14
Worked: Never as Catmull Rom grease pencil strokes were introduced in 4.3

Short description of error
Grease Pencil 'Close' Operator Crashes Blender

Exact steps for others to reproduce the error

  1. Convert Grease Pencil stroke from Poly to Catmull Rom
  2. Run "Close" operator - bpy.ops.grease_pencil.cyclical_set(type='CLOSE')
  3. Crash

Screen Recording #1 -> Crashes when using the Keyboard shortcut 'F'
Screen Recording #2 -> Crashes a second after running the Stroke Menu Close command

Mac crash log attached.

**System Information** Operating system: macOS-14.5-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-06 21:34, hash: `b520ae6efe14` Worked: Never as Catmull Rom grease pencil strokes were introduced in 4.3 **Short description of error** Grease Pencil 'Close' Operator Crashes Blender **Exact steps for others to reproduce the error** 1. Convert Grease Pencil stroke from Poly to Catmull Rom 2. Run "Close" operator - bpy.ops.grease_pencil.cyclical_set(type='CLOSE') 3. Crash [Screen Recording #1](https://youtu.be/8M8T8ecRguU) -> Crashes when using the Keyboard shortcut 'F' [Screen Recording #2](https://youtu.be/UGmecmB42OA) -> Crashes a second after running the Stroke Menu Close command Mac crash log attached.
226 KiB
Kevin C. Burke added the
Severity
Normal
Status
Needs Triage
Type
Bug
labels 2024-09-08 04:24:28 +02:00
Iliya Katushenock added the
Interest
Grease Pencil
label 2024-09-08 09:46:47 +02:00
Member

I can confirm the crash here. Setting to high severity as it is a crash.

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-09-07 14:04, hash: 8283bf37a2b8

I can confirm the crash here. Setting to high severity as it is a crash. **System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-09-07 14:04, hash: `8283bf37a2b8`
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-08 18:05:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#127302
No description provided.