Fix #127302: Grease pencil "close" operator causes crash